# pycli

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  install.sh
pycli/: main.py  pycli.py
