[tool.poetry]
name = "pycli"
version = "0.1.0"
description = "CLI template"
authors = ["Yasuhiro Ito"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
poethepoet = "^0.27.0"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycli = "pycli:pycli.main"

[tool.poe.tasks]
test = "pytest"

[tool.ruff.lint]
extend-select = [
  "I", # isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
