[tool.poetry]
name = "pycli"
version = "0.1.0"
description = "CLI template"
authors = ["Yasuhiro Ito"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
poethepoet = "^0.27.0"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycli = "pycli:main.main"

[tool.poe.tasks]
test = "pytest"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["D", "ANN002", "ANN003", "ANN101"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "ARG"]

[tool.ruff.lint.isort]
combine-as-imports = true
